--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="https://platypus-ucsd.github.io">Platypus @ UCSD</a></h1>
+        <h1><a href="https://platypus-phoenix.github.io">Platypus @ Phoenix</a></h1>
 
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" />
